--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -14,7 +14,6 @@ pluginManagement {
         id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
     }
 }
-
-include ":app"
+include ':app'
 
 apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
