--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   device_info: ^2.0.3
   path_provider: ^2.0.2
   permission_handler: ^11.3.0
-
+  syncfusion_flutter_pdfviewer: ^24.2.8
 
   flutter:
     sdk: flutter
